feat: 更新api接口开发规范& auth模块
